# claude-advisor

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ADR-001-advisory-output-and-retry-contract.md  implementation-plan.md  specification.md  update-policy.md
docs/reviews/: 2026-07-14-design-review.md  2026-07-14-pr-1-dogfood-review.md  2026-07-14-pr-2-publication-review.md  2026-07-15-opus-model-governance-review.md  2026-07-15-structured-output-reliability-review.md  2026-07-15-update-lifecycle-review.md
plugins/amanerp-second-opinion/.codex-plugin/: plugin.json
plugins/amanerp-second-opinion/references/: advisory-prompt.md  advisory-schema.json  pr-review-prompt.md  pr-review-schema.json
plugins/amanerp-second-opinion/scripts/: second_opinion.py
plugins/claude-advisor/.codex-plugin/: plugin.json
plugins/claude-advisor/references/: advisory-schema.json  pr-review-schema.json
plugins/claude-advisor/scripts/: claude_advisor.py
scripts/: marketplace_update_smoke.py  package_plugin.py  validate_project.py  validate_release.py
submission/: checklist.md  listing.json  policy-attestations.md  release-notes.md  reviewer-guide.md  test-cases.json
submission/assets-src/: README.md
submission/fixtures/: decision-context.md  decision-question.md  insufficient-decision.md  safe-change.diff  sensitive-context.env
tests/: helpers.py  test_packaging.py  test_release_contract.py  test_runner_contract.py  test_submission.py
tests/fixtures/: advisory-decision-with-output-request.md
(+8 files in other folders)
