[project]
name = "claude-advisor"
version = "0.1.0"
description = "A safety-first Codex plugin for independent Claude advisory and PR reviews"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Aman-CERP" }
]
keywords = ["claude", "codex", "code-review", "advisory"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Aman-CERP/claude-advisor"
Repository = "https://github.com/Aman-CERP/claude-advisor"
Issues = "https://github.com/Aman-CERP/claude-advisor/issues"
