[project]
name = "amanerp-second-opinion"
version = "0.2.1"
description = "A safety-first Codex plugin for independent advisory and PR reviews"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "AmanERP", email = "hello@amanerp.com" }
]
keywords = ["claude", "codex", "code-review", "advisory"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.urls]
Homepage = "https://amanerp.com/developer-tools/second-opinion"
Repository = "https://github.com/Aman-CERP/amanerp-second-opinion"
Issues = "https://github.com/Aman-CERP/amanerp-second-opinion/issues"
